# multi_lidar_multi_uav_dataset

./: CMakeLists.txt  README.md  index.html  package.xml
config/: sensors_suite.urdf
launch/: lidars_extrinsic_computation.launch
src/: avia_format_converter.cpp  lidars_extrinsic_computation.cpp  mid360_format_converter.cpp
static/csv/: HolybroStdn01.csv  HolybroStdn02.csv  HolybroStdn03.csv  HolybroStdn04.csv  autel_track_1.csv  autel_track_2.csv  autel_track_3.csv  autel_track_4.csv  autel_track_5.csv  autel_track_6.csv  autel_track_7.csv  holybro_track_1.csv  holybro_track_2.csv  holybro_track_3.csv  holybro_track_4.csv  holybro_track_5.csv  holybro_track_6.csv  holybro_track_7.csv  tello_track_1.csv  tello_track_2.csv  tello_track_3.csv  tello_track_4.csv  tello_track_5.csv  tello_track_6.csv  tello_track_7.csv
static/js/: dataset.js
